templates/Network.template.yml
AWSTemplateFormatVersion: 2010-09-09T00:00:00.000Z
Description: VPC
Resources:
    MainVPC:
        Type: 'AWS::EC2::VPC'
        Properties:
            CidrBlock: 10.0.0.0/16
    PublicACL:
        Type: 'AWS::EC2::NetworkAcl'
        Properties:
            VpcId: {Ref: MainVPC}
    InboundACLEntry:
        Type: 'AWS::EC2::NetworkAclEntry'
        Properties:
            CidrBlock: 0.0.0.0/0
            NetworkAclId: {Ref: PublicACL}
            RuleNumber: 100
            Egress: false
            PortRange: {From: 0, To: 65536}
            Protocol: -1
            RuleAction: allow
    OutboundACLEntry:
        Type: 'AWS::EC2::NetworkAclEntry'
        Properties:
            CidrBlock: 0.0.0.0/0
            NetworkAclId: {Ref: PublicACL}
            RuleNumber: 100
            Egress: true
            PortRange: {From: 0, To: 65536}
            Protocol: -1
            RuleAction: allow
    InternetGateway:
        Type: 'AWS::EC2::InternetGateway'
    InternetGatewayVPCAssoc:
        Type: 'AWS::EC2::VPCGatewayAttachment'
        Properties:
            InternetGatewayId: {Ref: InternetGateway}
            VpcId: {Ref: MainVPC}
    ElasticIp1:
        Type: 'AWS::EC2::EIP'
        Properties:
            Domain: vpc
    ElasticIp2:
        Type: 'AWS::EC2::EIP'
        Properties:
            Domain: vpc
    NatGateway1:
        Type: 'AWS::EC2::NatGateway'
        Properties:
            SubnetId: {Ref: PublicSubnet1}
            AllocationId: {'Fn::GetAtt': [ElasticIp1, AllocationId]}
    NatGateway2:
        Type: 'AWS::EC2::NatGateway'
        Properties:
            SubnetId: {Ref: PublicSubnet2}
            AllocationId: {'Fn::GetAtt': [ElasticIp2, AllocationId]}
    PublicRouteTable:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId: {Ref: MainVPC}
    PublicInternetRoute:
        Type: 'AWS::EC2::Route'
        Properties:
            RouteTableId: {Ref: PublicRouteTable}
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: {Ref: InternetGateway}
    PrivateRouteTable1:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId: {Ref: MainVPC}
    PrivateRouteTable2:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId: {Ref: MainVPC}
    PrivateNatRoute1:
        Type: 'AWS::EC2::Route'
        Properties:
            RouteTableId: {Ref: PrivateRouteTable1}
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: {Ref: NatGateway1}
    PrivateNatRoute2:
        Type: 'AWS::EC2::Route'
        Properties:
            RouteTableId: {Ref: PrivateRouteTable2}
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: {Ref: NatGateway2}
    PublicSubnet1:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: eu-west-1a
            VpcId: {Ref: MainVPC}
            MapPublicIpOnLaunch: true
            CidrBlock: 10.0.1.0/24
    PublicSubnet1RouteTableAssociation:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId: {Ref: PublicRouteTable}
            SubnetId: {Ref: PublicSubnet1}
    PublicSubnet1ACLAssoc:
        Type: 'AWS::EC2::SubnetNetworkAclAssociation'
        Properties:
            NetworkAclId: {Ref: PublicACL}
            SubnetId: {Ref: PublicSubnet1}
    PublicSubnet2:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: eu-west-1b
            VpcId: {Ref: MainVPC}
            MapPublicIpOnLaunch: true
            CidrBlock: 10.0.3.0/24
    PublicSubnet2RouteTableAssociation:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId: {Ref: PublicRouteTable}
            SubnetId: {Ref: PublicSubnet2}
    PublicSubnet2ACLAssoc:
        Type: 'AWS::EC2::SubnetNetworkAclAssociation'
        Properties:
            NetworkAclId: {Ref: PublicACL}
            SubnetId: {Ref: PublicSubnet2}
    PrivateSubnet1:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: eu-west-1a
            VpcId: {Ref: MainVPC}
            MapPublicIpOnLaunch: true
            CidrBlock: 10.0.2.0/24
    PrivateSubnet1RouteTableAssociation:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId: {Ref: PrivateRouteTable1}
            SubnetId: {Ref: PrivateSubnet1}
    PrivateSubnet2:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: eu-west-1b
            VpcId: {Ref: MainVPC}
            MapPublicIpOnLaunch: true
            CidrBlock: 10.0.4.0/24
    PrivateSubnet2RouteTableAssociation:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId: {Ref: PrivateRouteTable2}
            SubnetId: {Ref: PrivateSubnet2}
Outputs:
    VPCId:
        Description: 'Id of the VPC'
        Value:
            Ref: MainVPC
        Export:
            Name: VPCId
    PublicSubnet1Id:
        Description: 'Id of the public subnet 1'
        Value:
            Ref: PublicSubnet1
        Export:
            Name: PublicSubnet1Id
    PublicSubnet2Id:
        Description: 'Id of the public subnet 2'
        Value:
            Ref: PublicSubnet2
        Export:
            Name: PublicSubnet2Id
    PrivateSubnet1Id:
        Description: 'Id of the private subnet 1'
        Value:
            Ref: PrivateSubnet1
        Export:
            Name: PrivateSubnet1Id
    PrivateSubnet2Id:
        Description: 'Id of the private subnet 2'
        Value:
            Ref: PrivateSubnet2
        Export:
            Name: PrivateSubnet2Id
    NatGateway1Id:
        Description: 'Id of NatGateway1'
        Value:
            Ref: NatGateway1
        Export:
            Name: NatGateway1Id
    NatGateway2Id:
        Description: 'Id of NatGateway2'
        Value:
            Ref: NatGateway2
        Export:
            Name: NatGateway2Id
